--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body{
     background: url(./assets/aircraft.png);
     background-repeat: no-repeat;
     background-position: left center;
-    background-size: 45%;
+    background-size: 50%;
     background-color: #F0F0F3;
 }
 
@@ -28,7 +28,7 @@ header{
     width: 400px;
     position: fixed;
     top: 50px;
-    right: 200px;
+    right: 35%;
     z-index: 10;
 
     display: flex;
@@ -48,6 +48,7 @@ h3{
 }
 
 .flight-container{
+    z-index: 10;
     border-radius: 30px;
     padding: 10px;
 
@@ -58,6 +59,13 @@ h3{
                 0px 12px 10px -10px rgba(0,0,0,0.05);
     border: 1px solid rgba(0,0,0,0.0);
 }
+.info-uncheck{
+    color: red;
+    padding: 10px;
+    font-size: 18px;
+    font-weight: 100;
+
+}
 
 label{
     font-size: 20px;
@@ -65,6 +73,7 @@ label{
 }
 
 select{
+    color: blue;
     font-size: 20px;
     font-weight: 400;
     background-color: #F0F0F3;
@@ -94,10 +103,17 @@ select:focus{
 
 section{
     margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    
 }
+
+.airplane-container{
+    width: 400px;
+    position: fixed;
+    top: 100px;
+    right: 50%;
+
+}
+
 
 .seat,
 .seats{
@@ -131,7 +147,10 @@ section{
                 border-color: #e74c3c;
 }
 
-.col-business .seat:nth-of-type(3),
+.col-first .seat:nth-of-type(1),
+.col-first .seat:nth-of-type(3),
+.col-business .seat:nth-of-type(2),
+.col-business .seat:nth-of-type(4),
 .col-economy .seat:nth-of-type(3){
                 margin-right: 40px;
 }
@@ -149,10 +168,21 @@ section{
 .col-first,
 .col-business,
 .col-economy {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
     background-color: #F0F0F3;
     margin-bottom: 30px;
     padding: 10px;
     border: 1px solid rgba(0,0,0,0.2);
+}
+.col{
+    display: none;
+}
+
+.col-2{
+    visibility: hidden;
 }
 
 .col-first .row{
@@ -163,7 +193,7 @@ section{
 .ticket-container{
     position: fixed;
     top: 300px;
-    right: 200px;
+    right: 35%;
 
     display: flex;
     flex-direction: column;
@@ -223,7 +253,7 @@ section{
 .text-info{
     position: fixed;
     bottom: 250px;
-    right: 200px;
+    right: 35%;
 
     display: flex;
     flex-direction: column;
@@ -237,10 +267,14 @@ section{
     font-size: 20px;
 }
 
+.text-info span{
+    font-weight: 600;
+}
+
 .buy{
     position: fixed;
     bottom: 200px;
-    right: 295px;
+    right: 38%;
 
     display: flex;
     justify-content: center;
