--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ header{
     width: 400px;
     position: fixed;
     top: 50px;
-    right: 35%;
+    left: 52%;
     z-index: 10;
 
     display: flex;
@@ -193,7 +193,7 @@ section{
 .ticket-container{
     position: fixed;
     top: 300px;
-    right: 35%;
+    left: 52%;
 
     display: flex;
     flex-direction: column;
@@ -253,7 +253,7 @@ section{
 .text-info{
     position: fixed;
     bottom: 250px;
-    right: 35%;
+    left: 52%;
 
     display: flex;
     flex-direction: column;
@@ -274,7 +274,7 @@ section{
 .buy{
     position: fixed;
     bottom: 200px;
-    right: 38%;
+    left: 55%;
 
     display: flex;
     justify-content: center;
